<resources>
    <string name="app_name">uniforte</string>

    <string-array name="lista_exercicios">
        <item>Selecione um exercício</item>
        <item>Supino</item>
        <item>Agachamento</item>
        <item>Abdominal</item>
        <item>Burpee</item>
        <item>Leg Press</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vlibras">VLibras</string>
    <string name="digite_sua_mensagem">Digite sua mensagem</string>
    <string name="fundo_padr_o_unifor">Fundo padrão Unifor</string>
    <string name="voltar">Voltar</string>
    <string name="enviar">Enviar</string>
    <string name="feedback_cal_rico">Feedback Calórico</string>
    <string name="excluir">Excluir</string>
    <string name="_09_00">09:00</string>
    <string name="agendamentos">Agendamentos</string>
    <string name="_12_01">12/01</string>
    <string name="descri_o_da_aula">Descrição da aula</string>
    <string name="_18_00">18:00</string>
    <string name="pilates">Pilates</string>
    <string name="yoga">Yoga</string>
    <string name="_13_01">13/01</string>
    <string name="editar">Editar</string>
    <string name="zumba">Zumba</string>
    <string name="crossfit">Crossfit</string>
    <string name="_15_01_10_30">15/01 - 10:30</string>
    <string name="_12_01_18_01">12/01 - 18:01</string>
    <string name="_13_01_09_00">13/01 - 09:00</string>
    <string name="_14_01_11_00">14/01 - 11:00</string>
    <string name="agendar">Agendar</string>
    <string name="_19_30">19:30</string>
    <string name="aulas_dispon_veis">Aulas Disponíveis</string>
    <string name="professor_nome_do_professor">Professor: Nome do Professor</string>
    <string name="_17_00">17:00</string>
    <string name="cpf_do_aluno">CPF do Aluno</string>
    <string name="aluno_gmail_com">aluno@gmail.com</string>
    <string name="buscar_aluno_por_cpf">Buscar aluno por CPF</string>
    <string name="imagem_do_treino_inferior">Imagem do treino inferior</string>
    <string name="treino_com_foco_em_b_ceps_e_costas">Treino com foco em bíceps e costas</string>
    <string name="exerc_cios_nsupino_3x14_npuxada_frente_3x10_neleva_o_lateral_4x12_nrosca_scott_4x12">Exercícios:\nSupino 3x14\nPuxada Frente 3x10\nElevação Lateral 4x12\nRosca Scott 4x12</string>
    <string name="treino_cd">Treino CD</string>
    <string name="treino_ab">Treino AB</string>
    <string name="imagem_do_treino_superior">Imagem do treino superior</string>
    <string name="nome_do_professor">Nome do Professor</string>
    <string name="ficha_de_treino">Fichas de treino</string>
    <string name="agendar_nova_aula">Agendar nova aula</string>
    <string name="imagem_de_feedback_cal_rico">Imagem de feedback calórico</string>
    <string name="imagem_do_objetivo">Imagem do objetivo</string>
    <string name="agendamentos_da_semana">Agendamentos da semana</string>
    <string name="perda_de_gordura_e_ganho_de_massa_magra">Perda de gordura e ganho de massa magra</string>
    <string name="meus_objetivos">Meus objetivos</string>
    <string name="ol_narak">Olá, Narak!</string>
    <string name="perda_de_gordura">Perda de Gordura</string>
    <string name="ver_tudo">Ver tudo</string>
    <string name="ol">Olá!</string>
    <string name="ativar_vlibras">Ativar VLibras</string>
    <string name="editar_aula">Editar aula</string>
    <string name="ol_usu_rio">Olá, {Usuário}!</string>
    <string name="suas_aulas_da_semana">Suas aulas da semana</string>
    <string name="adicionar_aula">Adicionar aula</string>
    <string name="entrar">Entrar</string>
    <string name="link_para_cadastro">Link para Cadastro</string>
    <string name="n_o_possui_conta_cadastre_se">Não possui conta? Cadastre-se :)</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="perfil">Perfil</string>
    <string name="home">Home</string>
    <string name="meus_alunos">Meus alunos</string>
    <string name="exerc_cios">Exercícios</string>
    <string name="puxada_frente_3x10">Puxada Frente 3x10</string>
    <string name="nomeprofessor">$NomeProfessor</string>
    <string name="supino_3x14">Supino 3x14</string>
    <string name="eleva_o_lateral_4x12">Elevação Lateral 4x12</string>
    <string name="selecione_a_data">Selecione a data</string>
    <string name="selecione_o_hor_rio">Selecione o horário</string>
    <string name="digite_o_t_tulo_da_aula">Digite o título da aula</string>
    <string name="digite_a_descri_o_da_aula">Digite a descrição da aula</string>
    <string name="descri_o">Descrição</string>
    <string name="t_tulo">Título</string>
    <string name="data">Data</string>
    <string name="hor_rio">Horário</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="adicionar_aluno">Adicionar aluno</string>
    <string name="cone_de_busca">Ícone de busca</string>
    <string name="cone_do_aluno">Ícone do Aluno</string>
    <string name="nome_do_aluno">Nome do aluno</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="endere_o">Endereço</string>
    <string name="editar_informa_es">Editar informações</string>
    <string name="professor_email_com">professor@email.com</string>
    <string name="telefone_do_professor">Telefone do professor</string>
    <string name="endere_o_do_professor">Endereço do professor</string>
    <string name="telefone_do_aluno">Telefone do aluno</string>
    <string name="endere_o_do_aluno">Endereço do aluno</string>
    <string name="foto_do_aluno">Foto do Aluno</string>
    <string name="objetivo_do_aluno">Objetivo do Aluno</string>
    <string name="supino_3x14_puxada_frente_3x10_eleva_o_lateral_4x12_rosca_scott_4x12">Supino 3x14\nPuxada Frente 3x10\nElevação Lateral 4x12\nRosca Scott 4x12</string>
    <string name="descri_o_do_objetivo">Descrição do objetivo</string>
    <string name="adicionar_nova_ficha">Adicionar nova ficha</string>
    <string name="e_mail2">E-mail:</string>
    <string name="telefone2">Telefone:</string>
    <string name="endere_o2">Endereço:</string>
    <string name="editar_ficha_de_treino">Editar ficha de treino</string>
    <string name="t_tulo_da_ficha">Título da ficha</string>
    <string name="digite_a_descri_o_da_ficha">Digite a descrição da ficha</string>
    <string name="digite_o_t_tulo_da_ficha">Digite o título da ficha</string>
    <string name="digite_os_exerc_cios_separados_por_v_rgula">Digite os exercícios separados por vírgula</string>
</resources>