<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_aluno_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/unifor_gelo">

    <ScrollView
        android:id="@+id/scrollViewConteudo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/container_nav_inferior"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/llConteudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Saudação -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp">

                <!-- Saudação -->
                <ProgressBar
                    android:id="@+id/progressBarNome"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone" />

                <TextView

                    android:id="@+id/tvOlaUsuario"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/ol"
                    android:fontFamily="@font/satoshi_bold"
                    android:text="@string/ol_narak"
                    android:textColor="@color/unifor_marinho"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <!-- Botão Libras à direita -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAtivarVLibras"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/ic_libras"
                    android:contentDescription="@string/ativar_vlibras"
                    android:padding="0dp"
                    app:backgroundTint="@color/unifor_marinho" />
            </LinearLayout>

            <!-- Título da seção: Agendamentos da semana -->

            <LinearLayout
                android:id="@+id/llAgendamentosHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAgendamentosSemana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/satoshi_bold"
                    android:text="@string/agendamentos_da_semana"
                    android:textColor="@color/unifor_marinho"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvVerTudo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/satoshi_medium"
                    android:text="@string/ver_tudo"
                    android:textColor="@color/unifor_anil"
                    android:textSize="15sp" />
            </LinearLayout>

            <!-- Card simulado para Agendamento 1 -->
            <LinearLayout
                android:id="@+id/llCardAula1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/card_agendados"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="12dp">


                <TextView
                    android:id="@+id/tvTituloAula1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/satoshi_bold"
                    android:text="@string/pilates"
                    android:textColor="@color/unifor_marinho"
                    android:textColorLink="@color/unifor_marinho"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDescricaoAula1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/satoshi_medium"
                    android:text="@string/descri_o_da_aula"
                    android:textColor="@color/material_dynamic_neutral30"
                    android:textColorLink="@color/material_dynamic_neutral30"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/llDataHoraAula1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDataAula1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/satoshi_regular"
                        android:text="@string/_12_01"
                        android:textColor="@color/unifor_anil"
                        android:textColorLink="@color/unifor_anil" />

                    <TextView
                        android:id="@+id/tvHoraAula1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/satoshi_regular"
                        android:text="@string/_18_00"
                        android:textColor="@color/unifor_anil"
                        android:textColorLink="@color/unifor_anil" />

                    <ImageView
                        android:id="@+id/btnDeletarAulaHome1"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/excluir"
                        android:src="@drawable/ic_delete"
                        app:tint="@color/unifor_marinho" />

                </LinearLayout>
            </LinearLayout>

            <!-- Card simulado para Agendamento 2 -->
            <LinearLayout
                android:id="@+id/llCardAula2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/card_agendados"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tvTituloAula2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/satoshi_bold"
                    android:text="@string/yoga"
                    android:textColor="@color/unifor_marinho"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDescricaoAula2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/satoshi_medium"
                    android:text="@string/descri_o_da_aula"
                    android:textColor="@color/material_dynamic_neutral30"
                    android:textColorLink="@color/material_dynamic_neutral30"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/llDataHoraAula2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDataAula2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/satoshi_regular"
                        android:text="@string/_13_01"
                        android:textColor="@color/unifor_anil"
                        android:textColorLink="@color/unifor_anil" />

                    <TextView
                        android:id="@+id/tvHoraAula2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/satoshi_regular"
                        android:text="@string/_09_00"
                        android:textColor="@color/unifor_anil"
                        android:textColorLink="@color/unifor_anil" />

                    <ImageView
                        android:id="@+id/btnDeletarAulaHome2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/excluir"
                        android:src="@drawable/ic_delete"
                        app:tint="@color/unifor_marinho" />

                </LinearLayout>
            </LinearLayout>

            <!-- Botão para agendar nova aula -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAgendarNovaAula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/unifor_azulclaro"
                android:drawablePadding="8dp"
                android:fontFamily="@font/satoshi_bold"
                android:text="@string/agendar_nova_aula"
                android:textColor="@color/unifor_marinho"
                android:textColorLink="@color/unifor_marinho"
                app:icon="@drawable/grafismo_unifor_4"
                app:iconPadding="6dp"
                app:iconSize="16dp"
                app:iconTint="@color/unifor_marinho" />

            <!-- Seção Meus objetivos -->
            <TextView
                android:id="@+id/tvMeusObjetivos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/satoshi_bold"
                android:text="@string/meus_objetivos"
                android:textColor="@color/unifor_marinho"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Card simulado para Objetivos -->
            <LinearLayout
                android:id="@+id/llCardObjetivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded_card"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <!-- Texto do Objetivo -->
                <LinearLayout
                    android:id="@+id/llObjetivoTexto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTituloObjetivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/satoshi_bold"
                        android:text="@string/perda_de_gordura"
                        android:textColor="@color/unifor_anil"
                        android:textColorLink="@color/unifor_anil"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDescricaoObjetivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="@font/satoshi_medium"
                        android:text="@string/perda_de_gordura_e_ganho_de_massa_magra"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Imagem/ícone simulando o objetivo -->
                <ImageView
                    android:id="@+id/ivObjetivo"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/imagem_do_objetivo"
                    android:src="@drawable/ic_objetivo" />

            </LinearLayout>

            <!-- Seção Feedback Calórico -->
            <TextView
                android:id="@+id/tvFeedbackCalorico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/satoshi_bold"
                android:text="@string/feedback_cal_rico"
                android:textColor="@color/unifor_marinho"
                android:textColorLink="@color/unifor_marinho"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Card para Feedback Calórico -->

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">

                <!-- Imagem de fundo (feedback calórico) -->
                <ImageView
                    android:id="@+id/ivFeedbackCalorico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/imagem_de_feedback_cal_rico"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cardfeedback" />

                <!-- Imagem sobreposta (mundo) -->
                <ImageView
                    android:id="@+id/ivObjetivo3"
                    android:layout_width="161dp"
                    android:layout_height="99dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:contentDescription="@string/imagem_do_objetivo"
                    android:src="@drawable/mundo"
                    android:translationX="100dp" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/container_nav_inferior"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true" />

    <!-- VLibras WebView FLUTUANTE -->
    <com.example.uniforte.DraggableWebView
        android:id="@+id/webVLibras"
        android:layout_width="320dp"
        android:layout_height="340dp"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:overScrollMode="never"
        android:visibility="invisible"
        tools:visibility="gone" />

</RelativeLayout>